[tool.poetry]
name = "lugeon_test"
version = "0.1.0"
description = ""
authors = ["Lovro Blazok <lblazok3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.2"
numpy = "^1.19.2"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
